FIX: overflow books

--- a/practice06/src/layout/assets/styles/global.css
+++ b/practice06/src/layout/assets/styles/global.css
@@ -45,3 +45,8 @@ a {
 .roboto, .roboto > * {
     font-family: 'Roboto', Arial, sans-serif;
 }
+
+body:has(.popup-we) .popup-overflow {
+    overflow: hidden;
+    max-height: 100vh;
+}
